tests/multi_file/passing/T1_import_qualified/main.mlang
import std::math;

fn main ||->() {
    let value std::math::sin(0.0);
    println(f64_to_string(value));
};
