tests/multi_file/failing/P5_import_private_doc_hint/main.mlang
import std::math;

fn main ||->() {
    println(f64_to_string(std::math::cos_impl(0.0)));
};
